# flowscad

./: .gitignore  Cargo.toml  README.md
examples/: 2024_aaron_ring1-scad.rs  aluminum-scad.rs  badge_holder-scad.rs  badge_holder_reverse-scad.rs  badge_holder_thick-scad.rs  bathroom_join-scad.rs  borromean_square_piece-scad.rs  borromean_triangle-scad.rs  brio-scad.rs  bubble_cube-scad.rs  burr_curved-scad.rs  burr_curved_laser-scad.rs  burr_curved_laser_old-scad.rs  burr_egg-scad.rs  burr_general-scad.rs  burr_simple-scad.rs  burr_triple-scad.rs  chopstick_holder-scad.rs  coffee_filter_holder-scad.rs  cow_spot-scad.rs  cylinder_twist_bisection-scad.rs  die_octahedron_pips-scad.rs  die_octahedron_smooth-scad.rs  doterra_holder-scad.rs  ellipse_loop-scad.rs  ex_line-scad.rs  ex_union.rs  flexiband-scad.rs  frictionless_cards-scad.rs  frictionless_center_big-scad.rs  frictionless_sector-scad.rs  frictionless_target1-scad.rs  hypo5_in_hypo6-scad.rs  hypo5_in_hypo6_twist-scad.rs  hypocycloid4-scad.rs  hypocycloid4_stack-scad.rs  hypocycloid5_spin-scad.rs  icon-svg.rs  invertible_4circle-scad.rs  invertible_circle_wedge-scad.rs  (+50 more)
src/: .lib.rs.swp  .scad2d.rs.swp  cartesian.rs  common.rs  convex_hull.rs  d2.rs  d2_face.rs  d3.rs  ex1.scad  ex1.scad.py  finite_number.rs  lib.rs  positive_real.rs  scad1d.rs  scad2d.rs  scad3d.rs  temp.scad
src/d2/: d2_face.rs  d2_hypocycloid.rs  d2_trait.rs
src/d3/: d3_polygon_stack.rs  d3_trait.rs
tests/: test_color.rs  test_convex_hull_3d.rs  test_convex_hull_octahedron-scad.rs  test_linear_extrude.rs  test_minkowski.rs  test_shape.rs  test_stdin.rs
tests/qhull/: octahedron.qhull  test_qhull.rs  test_qhull2.rs
