[package]
name = "flowscad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
itertools = "0.12.1"
lazy_static = "1.4.0"
nalgebra = "0.32.6"
num-traits = "0.2.19"
qhull = "0.3.1"
typed_floats = "1.0.1"


