[package]
name = "flowscad"
version = "0.1.2"
authors = [ "Thomas G. Draper" ]
edition = "2021"
rust-version = "1.81"
description = "2D graphic and 3D object design with a Rustic functional approach. SVG and OpenSCAD output."
documentation = "https://docs.rs/flowscad"
readme = "README.md"
repository = "https://github.com/SmoothDragon/flowscad"
license = "LGPL-3.0-or-later"
keywords = ["scad", "svg", "graphics", "2D", "3D"]
categories = ["graphics", "mathematics"]
exclude = ["/src/bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
itertools = "0.12.1"
qhull = "0.3.1"
rand = "0.8.5"
rand_distr = "0.4.3"
typed_floats = "1.0.2"

bitperm = { git = "https://github.com/SmoothDragon/bitperm.git" }
ndarray = "0.17.1"
num-complex = "0.4.6"

